REGRESSION (265576@main): Wrong paint order of positioned and in-flow content inside overflow:scroll https://bugs.webkit.org/show_bug.cgi?id=261302 rdar://115144982

Reviewed by NOBODY (OOPS!).

We end up having multiple backing store providers that overlap each other.

* LayoutTests/compositing/layer-creation/clipping-scope/nested-scroller-overlap-expected.txt:
* LayoutTests/compositing/shared-backing/overflow-scroll/backing-sharing-multiple-overlap-expected.txt: Added.
* LayoutTests/compositing/shared-backing/overflow-scroll/backing-sharing-multiple-overlap.html: Added.
* LayoutTests/platform/ios-wk2/compositing/layer-creation/clipping-scope/nested-scroller-overlap-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/shared-backing/overflow-scroll/backing-sharing-multiple-overlap-expected.txt: Added.
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::BackingSharingState::canUseMultipleProviders const):

Move the overlap test to canUseMultipleProviders so it is done after descendant traversal for each new provider candidate.

(WebCore::RenderLayerCompositor::BackingSharingState::updateBeforeDescendantTraversal):